--- a/index.Rmd
+++ b/index.Rmd
@@ -1,17 +1,15 @@
 ---
-title: "A Book"
-author: "Frida Gomam"
+title: "Fluent Graphics"
+author: "Adam Bartonicek"
 site: bookdown::bookdown_site
 documentclass: book
 output:
   bookdown::gitbook: default
   #bookdown::pdf_book: default
+bibliography: [references.bib, packages.bib]
+
 ---
 
-# Hello World
+# Abstract 
 
-Hi.
-
-Bye.
-
-<!-- If you need PDF output, uncomment bookdown::pdf_book above in YAML. You will need a LaTeX installation, e.g., https://yihui.name/tinytex/ -->
+Something something about section.
