--- a/references.bib
+++ b/references.bib
@@ -1800,6 +1800,45 @@
 	url = {https://developer.mozilla.org/en-US/docs/Web/SVG}
 }
 
+@misc{mdn2024c,
+	title = {JavaScript language overview - JavaScript {$\vert$} MDN},
+	author = {{MDN}},
+	journal = {MDN Web Docs},
+	year = {2024},
+	month = sep,
+	note = {[Online; accessed 25. Sep. 2024]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Language_overview}
+}
+
+@misc{mdn2024d,
+	title = {Classes - JavaScript {$\vert$} MDN},
+	author = {{MDN}},
+	journal = {MDN Web Docs},
+	year = {2024},
+	month = jul,
+	note = {[Online; accessed 25. Sep. 2024]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes}
+}
+
+@misc{mdn2024e,
+	title = {{Private properties - JavaScript {$\vert$} MDN}},
+	journal = {MDN Web Docs},
+	year = {2024},
+	month = jul,
+	note = {[Online; accessed 26. Sep. 2024]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes/Private_properties}
+}
+
+@misc{mdn2024e,
+	title = {Functions - JavaScript {$\vert$} MDN},
+	author = {{MDN}},
+	journal = {MDN Web Docs},
+	year = {2024},
+	month = aug,
+	note = {[Online; accessed 25. Sep. 2024]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions}
+}
+
 @manual{wickham2023,
     title = {scales: Scale Functions for Visualization},
     author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
@@ -1825,3 +1864,137 @@
     isbn = {978-3-319-24277-4},
     url = {https://ggplot2.tidyverse.org},
   }
+
+@article{van2009,
+  title={Programming paradigms for dummies: What every programmer should know},
+  author={Van Roy, Peter and others},
+  journal={New computational paradigms for computer music},
+  volume={104},
+  pages={616--621},
+  year={2009},
+  publisher={IRCAM/Delatour France}
+}
+
+@article{chambers2014,
+  title={Object-oriented programming, functional programming and R},
+  author={Chambers, John M},
+  journal={Statistical Science},
+  volume={29},
+  number={2},
+  pages={167--180},
+  year={2014},
+  doi={10.1214/13-STS452}
+}
+
+@book{wickham2019,
+  title={Advanced R},
+  author={Wickham, Hadley},
+  year={2019},
+  publisher={Chapman and Hall/CRC}
+}
+
+@article{jordan2015,
+  title={A feature model of actor, agent, functional, object, and procedural programming languages},
+  author={Jordan, Howell and Botterweck, Goetz and Noll, John and Butterfield, Andrew and Collier, Rem},
+  journal={Science of Computer Programming},
+  volume={98},
+  pages={120--139},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{frame2014,
+  title={A comparison of functional and imperative programming techniques for mathematical software development},
+  author={Frame, Scott and Coffey, John W},
+  journal={Journal of Systemics, Cybernetics and Informatics},
+  volume={12},
+  number={2},
+  pages={1--10},
+  year={2014}
+}
+
+@article{hayes2003,
+  title={Computing Science: The Post-OOP Paradigm},
+  author={Hayes, Brian},
+  journal={American Scientist},
+  volume={91},
+  number={2},
+  pages={106--110},
+  year={2003},
+  publisher={JSTOR}
+}
+
+@book{sharvit2022,
+  title={Data-oriented Programming: Reduce Software Complexity},
+  author={Sharvit, Yehonathan},
+  year={2022},
+  publisher={Simon and Schuster}
+}
+
+@article{fabian2018,
+  title={Data-oriented design},
+  author={Fabian, Richard},
+  journal={framework},
+  volume={21},
+  pages={1--7},
+  year={2018}
+}
+
+@article{moseley2006,
+  title={Out of the tar pit},
+  author={Moseley, Ben and Marks, Peter},
+  journal={Software Practice Advancement (SPA)},
+  volume={2006},
+  year={2006}
+}
+
+@article{codd1970,
+  title={A relational model of data for large shared data banks},
+  author={Codd, Edgar F},
+  journal={Communications of the ACM},
+  volume={13},
+  number={6},
+  pages={377--387},
+  year={1970},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{acton2014,
+  title={Data-oriented design and c++},
+  author={Acton, Mike},
+  journal={Luento. CppCon},
+  year={2014}
+}
+
+@article{acton2019,
+  title={Building a data-oriented future},
+  author={Acton, Mike},
+  journal={WeAreDevelopers},
+  year={2019}
+}
+
+@misc{zig2024,
+	title = {Documentation - The Zig Programming Language},
+	author = {{Zig Software Foundation}},
+	year = {2024},
+	month = sep,
+	note = {[Online; accessed 26. Sep. 2024]},
+	url = {https://ziglang.org/documentation/master}
+}
+
+@misc{rust2024,
+	title = {pub - Rust},
+	author = {{Rust Foundation}},
+	year = {2024},
+	month = sep,
+	note = {[Online; accessed 26. Sep. 2024]},
+	url = {https://doc.rust-lang.org/std/keyword.pub.html}
+}
+
+@article{harkonen2019,
+  title={Advantages and Implementation of Entity-Component-Systems},
+  author={H{\"a}rk{\"o}nen, Toni},
+  year={2019}
+}
+
+
